Colaboratory를 통해 생성됨

--- a/CNN_with_MNIST_and_custom_dataset.ipynb
+++ b/CNN_with_MNIST_and_custom_dataset.ipynb
@@ -4,6 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "TTva0LYNS5Zy"
+      ],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -3480,19 +3483,34 @@
         "            print(txt)\n",
         "        self.correct = correct\n",
         "\n",
-        "    def test_visualize(self, dataloader=None):\n",
+        "    def test_visualize(self, net=None, dataloader=None):\n",
         "        if dataloader: \n",
         "            datas, labels = next(iter(dataloader))\n",
         "        else:\n",
         "            datas, labels = next(iter(self.trainloader)) \n",
         "\n",
-        "        self.net.eval()\n",
-        "        pred = self.net(datas)\n",
+        "        if net:\n",
+        "            net.eval()\n",
+        "            pred = net(datas)\n",
+        "        else:\n",
+        "            self.net.eval()\n",
+        "            pred = self.net(datas)\n",
+        "\n",
+        "        np_label = np.expand_dims(labels.numpy(), axis=0)\n",
+        "        np_pred = np.expand_dims(pred.argmax(1).numpy(), axis=0)\n",
+        "\n",
+        "        total_len = len(labels)\n",
+        "        arr = np.empty((0,total_len),int)\n",
+        "        arr = np.append(arr, np.array(nlabel), axis=0)\n",
+        "        arr = np.append(arr, np.array(npred), axis=0)\n",
+        "\n",
+        "        df = pd.DataFrame(arr, index = ['input', 'prediced'])\n",
         "\n",
         "        print(f'''\n",
         "        input labels are : {labels}\n",
         "        predicted labels are : {pred.argmax(1)}\n",
         "        ''')\n",
+        "        df \n",
         "\n",
         "\n",
         "    def save_process(self):\n",
@@ -3519,7 +3537,7 @@
         "        print(f\"saved PyTorch Model to '{fname}'\")\n",
         "\n",
         "    def process(self):\n",
-        "        \n",
+        "\n",
         "        self.process_txt += f'Epochs : {self.epochs}\\n'\n",
         "\n",
         "        for t in range(self.epochs):\n",
